feat: add cloud warehouse service core
